--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,13 @@ li{
 a{
     text-decoration: none;color: #000;
 }
+
+/* INDEX */
+
+/* cabecera */
+
+/* canciones */
+
+/* albums */
+
+/* artistas */
