--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,9 @@ img{
 }
 /* cabecera */
 .logo{
-    width: 100px;
-    height: 100px;
+    width: 85px;
+    height: 45x;
+    align-items: center;
 }
 
 .main-header{
