--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,7 @@ a{
 body{
     background-color:steelblue
 }
-img{
-    width: 120px;
-    height: 130px
-}
+
 /* cabecera */
 .logo{
     width: 200px;
@@ -62,14 +59,15 @@ form input{
 }
 
 
-/*Footer*/
-footer{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    text-align: center;
-    background-color: teal;
+/* IMG INDEX */
+
+.img-container{
+    width: 100%;
+    padding: 20px;
+    height: auto;
+    border-radius: 50px;
 }
+
 
 /* CANCIONES INDEX */
 .main-canciones{
@@ -89,16 +87,51 @@ footer{
 /* ALBUMS INDEX */
 .main-albums{
     display: flex;
+    
 }
 .titulo-albums{
     display: flex;
+    text-align: center;
 }
 .albums{
     display: flex;
+    flex-direction: column;
+    
 }
 
 
 /* ARTISTAS INDEX */
+.main-artistas{
+    display: flex;
+    
+}
+.titulo-artistas{
+    display: flex;
+    text-align: center;
+}
+.artistas{
+    display: flex;
+    flex-direction: column;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* detail-tracks */
@@ -128,3 +161,11 @@ div img{
     font-style: oblique;
 }
 
+/*Footer*/
+footer{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    text-align: center;
+    background-color: teal;
+}
