--- a/css/style.css
+++ b/css/style.css
@@ -29,19 +29,36 @@ img{
     height: 130px
 }
 /* cabecera */
+header{
+    display: flex;
+    flex-direction: row;
+    margin: 30px 20px;
+}
+.cajalogo{
+    width: 20%;
+}
 .logo{
     width: 200px;
-    margin: 20px;
     align-items: center;
 }
-
-.main-header{
-    display: flex;
-    flex-direction: column;
-}
-
-.main-nav{
+form{
     width: 100%;
+    height: 50%;
+    padding-left: 10px;
+}
+.barrabusqueda input{
+    border-radius: 5px;
+    width: 82%;
+    height: 40px;
+}
+.divbutton{
+    width: 12%;
+    border-radius: 5px;
+}
+.main-nav{
+    display: flex;
+    width: 100%;
+    align-items: flex-end;
 }
 .main-nav ul{
     display: flex;
@@ -50,16 +67,7 @@ img{
     justify-content: space-around;
     background-color: rgba(155, 155, 155, 0.6);
 }
-.main-nav ul li{
-    text-align: center;
-}
-form{
-    text-align: center;
-    width: 100%;
-}
-form input{
-    border-radius: 50px;
-}
+.main-nav ul li
 
 /*Footer*/
 footer{
@@ -98,7 +106,7 @@ footer{
 /* ARTISTAS INDEX */
 
 
-/* detail-tracks */
+/*detail-tracks */
 .container-track{
     display: flex;
     flex-wrap: wrap;
@@ -110,9 +118,9 @@ footer{
     width: 300px;
     margin: 60px;
     height: 460px;
-    border-radius: 50px;
+    border-radius: 30px;
 }
-div img{
+.article-track div img{
     width: 100%;
     padding: 20px;
     height: auto;
