--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ form input{
 /* IMG INDEX */
 
 .img-container{
-    width: 100%;
+    width: 360px;
     padding: 20px;
     height: auto;
     border-radius: 50px;
