--- a/css/style.css
+++ b/css/style.css
@@ -29,14 +29,15 @@ body{
 header{
     display: flex;
     flex-direction: row;
-    margin: 30px 20px;
+    margin: 30px 40px;
+    width: 100%;
+    max-height: 100px;
 }
 .cajalogo{
     width: 20%;
 }
 .logo{
-    width: 200px;
-    align-items: center;
+    width: 135px;
 }
 form{
     width: 100%;
@@ -46,7 +47,7 @@ form{
 .barrabusqueda input{
     border-radius: 5px;
     width: 82%;
-    height: 40px;
+    height: 30px;
 }
 .divbutton{
     width: 12%;
@@ -55,16 +56,15 @@ form{
 .main-nav{
     display: flex;
     width: 100%;
-    align-items: flex-end;
+    align-items: 
 }
 .main-nav ul{
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     justify-content: space-around;
     background-color: rgba(155, 155, 155, 0.6);
 }
-.main-nav ul li
+
 
 
 
@@ -123,23 +123,6 @@ form{
     flex-direction: column;
     
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
