--- a/css/style.css
+++ b/css/style.css
@@ -39,37 +39,32 @@ header{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    margin: 30px 40px;
-    max-height: 100px;
-    justify-content: space-around;
 }
 .logo{
     width: 135px;
 }
-form{
-    width: 100%;
-    height: 50%;
-    padding-left: 10px;
-}
-.barrabusqueda input{
-    border-radius: 5px;
-    width: 82%;
-    height: 30px;
-}
 #centroheader{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     width: 80%;
 }
 .main-nav{
-    display: flex;
-    width: 100%;
+    width: 80%;
+    margin-left: 140px;
 }
 .main-nav ul{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    background-color: rgba(155, 155, 155, 0.6);
+    justify-content:space-evenly;
+}
+form{
+    width: 100%;
+    border-radius: 5px;
+    margin: 20px 10px 0px 510px;
+}
+.barrabusqueda{
+    
 }
 
 /*footer*/
@@ -157,18 +152,17 @@ footer{
     width: 300px;
     margin: 60px;
     height: 680px;
-    border-radius: 30px;
+    border-radius: 15px;
 }
 .article-track div img{
     width: 100%;
     padding: 20px;
     height: auto;
-    border-radius: 50px;
+    border-radius: 25px;
 }
 .track-data{
     text-align: center;
 }
-
 iframe{
     margin-bottom: 15px;
 }
