--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,8 @@ a{
 
 /* INDEX */
 body{
-    background-color:steelblue
-    
+    background-color:rgb(109, 109, 109);
+    max-width: 1920px;
 }
 
 /* cabecera */
@@ -63,9 +63,7 @@ form{
     border-radius: 5px;
     margin: 20px 10px 0px 510px;
 }
-.barrabusqueda{
-    
-}
+
 
 /*footer*/
 footer{
@@ -75,6 +73,7 @@ footer{
     background-color: darkblue;
     width: 100%;
     justify-content: space-between;
+    margin-top: 50px;
 }
 .contact{
     background-color: brown;
@@ -84,22 +83,36 @@ footer{
 }
 
 /* IMG INDEX */
-.img-container{
-    width: 360px;
+
+.index-img{
+    width: 330px;
     padding: 20px;
-    height: auto;
+    height: 330px;
     border-radius: 50px;
 }
+/* TITULOS INDEX */
+.titulos-index{
+    color: yellow;
+    font-size: 36px;
+    font-family: 'Antonio', sans-serif;
+    background-color: rgb(0, 0, 0);
+}
 
+/* ELEMENTOS */
+.titulo-elementos{
+    font-size: 20px;
+    text-align: center  ;
+    margin: 0px;
 
+}
+.texto-elementos{
+    text-align: center;
+}
 /* CANCIONES INDEX */
 .main-canciones{
     display: flex;
+    justify-content: space-between;
     
-}
-.titulo-canciones{
-    display: flex;
-    text-align: center;
 }
 .canciones{
     display: flex;
@@ -110,11 +123,7 @@ footer{
 /* ALBUMS INDEX */
 .main-albums{
     display: flex;
-    
-}
-.titulo-albums{
-    display: flex;
-    text-align: center;
+    justify-content: space-between;
 }
 .albums{
     display: flex;
@@ -126,12 +135,10 @@ footer{
 /* ARTISTAS INDEX */
 .main-artistas{
     display: flex;
+    justify-content: space-between;
     
 }
-.titulo-artistas{
-    display: flex;
-    text-align: center;
-}
+
 .artistas{
     display: flex;
     flex-direction: column;
