--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ footer{
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
-    
+    background-color: rgba(255, 0, 221, 0.685)
 }
 .canciones{
     display: flex;
@@ -136,6 +136,7 @@ footer{
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
+    background-color: rgba(255, 0, 221, 0.685)
 }
 .albums{
     display: flex;
@@ -150,7 +151,7 @@ footer{
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
-    
+    background-color: rgba(255, 0, 221, 0.685)
 }
 
 .artistas{
