--- a/css/style.css
+++ b/css/style.css
@@ -86,17 +86,12 @@ footer{
 
 /* IMG INDEX */
 .index-img{
-    width: 250px;
+    width: 330px;
+    height: 330px;
     padding: 20px;
-    height: 250px;
-    border-radius: 20px;
+    border-radius: 28px;
 }
-.main-canciones img{
-    border-radius: 70px;
-}
-.main-artistas img{
-    border-radius: 150px;
-}
+
 /* TITULOS INDEX */
 .titulos-index{
     color: yellow;
@@ -122,7 +117,7 @@ footer{
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
-    background-color: rgba(255, 0, 221, 0.685)
+    background-color: rgba(255, 0, 221, 0.5);
 }
 .canciones{
     display: flex;
@@ -136,7 +131,7 @@ footer{
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
-    background-color: rgba(255, 0, 221, 0.685)
+    background-color: rgba(255, 0, 221, 0.5);
 }
 .albums{
     display: flex;
@@ -151,7 +146,7 @@ footer{
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
-    background-color: rgba(255, 0, 221, 0.685)
+    background-color: rgba(255, 0, 221, 0.5);
 }
 
 .artistas{
