--- a/css/style.css
+++ b/css/style.css
@@ -103,12 +103,12 @@ footer{
     font-size: 36px;
     font-family: 'Antonio', sans-serif;
     background-color: rgb(0, 0, 0);
+    margin: 40px 20px 0px 20px;
 }
-
 /* ELEMENTOS */
 .titulo-elementos{
     font-size: 20px;
-    text-align: center  ;
+    text-align: center;
     margin: 0px;
     font-family: 'Poppins', sans-serif;
 }
@@ -121,8 +121,9 @@ footer{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 100%;
-    
+    border: solid green;
+    border-width: 20px;
+    margin: 0px 20px;
 }
 .canciones{
     display: flex;
@@ -150,9 +151,7 @@ footer{
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
-    
 }
-
 .artistas{
     display: flex;
     flex-direction: column;
