--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,7 @@ iframe{
     display: flex;
     flex-direction: row;
     margin: 20px;
-    background-color: rgb(200, 200, 55);
+    background-color: rgba(255, 0, 221, 0.5);
 }
 .da-img{
     width: 400px;
