--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ li{
     list-style-type: none;
 }
 a{
-    text-decoration: none;color: #000;
+    text-decoration: none;
 }
 
 /* Colores, Fuentes y Fondos Principales */
@@ -24,9 +24,9 @@ body{
     font-family: 'Montserrat', sans-serif;   
     font-weight: lighter;
 }
-
-/*h4, a{
-}*/
+h4, a{
+    color: rgb(214, 191, 191);
+}
 h3{
     font-weight: bold;
 }
@@ -35,6 +35,8 @@ header{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    height: 160px;
+    background-image: linear-gradient(to bottom, #470044, #460047f3, #43004bde, #42004e86, #3f005200);
 }
 .logo{
     width: 135px;
@@ -48,23 +50,28 @@ header{
 nav{
     width: 80%;
     margin-left: 140px;
+    font-weight: bold;
 }
 nav ul{
     display: flex;
     flex-direction: row;
     justify-content:space-evenly;
 }
-nav{
-    color: white;
-    font-weight: bold;
-}
 form{
     width: 30%;
-    border-radius: 5px;
     margin: 20px 0px 0px 470px;
+    color: rgb(214, 191, 191);
 }
 form input{
-    width: 250px;
+    width: 240px;
+    height: 20px;
+    border-radius: 25px;
+    border: solid rgb(214, 191, 191); 
+    background-color: rgb(214, 191, 191);
+}
+form button{
+    border-radius: 5px;
+    background-color: rgb(214, 191, 191);
 }
 
 /*footer*/
@@ -86,8 +93,8 @@ footer{
 
 /* IMG INDEX */
 .index-img{
-    width: 330px;
-    height: 330px;
+    width: 300px;
+    height: 300px;
     padding: 20px;
     border-radius: 28px;
 }
@@ -98,7 +105,7 @@ footer{
     font-size: 36px;
     font-family: 'Antonio', sans-serif;
     background-color: rgb(0, 0, 0);
-    margin: 40px 20px 0px 20px;
+    margin: 0px 20px 0px 20px;
 }
 /* ELEMENTOS */
 .titulo-elementos{
@@ -151,6 +158,7 @@ footer{
     justify-content: space-between;
     width: 100%;
     background-color: rgba(255, 0, 221, 0.5);
+    padding-bottom: 20px;
 }
 .artistas{
     display: flex;
