--- a/css/style.css
+++ b/css/style.css
@@ -423,4 +423,117 @@ ul.detail-genres li{
         width: 80%;
         align-content: center;
     }
+    /* detail tracks */
+    .article-track{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+        width: 60%;
+        margin-top: 120px;
+        background-color: rgba(255, 0, 221, 0.72);
+    }
+    .track-data{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+        width: 300px;
+    }
+    .video video{
+        width: 230px;
+        border-radius: 5px;
+    }
+    /* detail albums */
+    .section-album{
+        background-color: rgba(255, 0, 221, 0.72);
+        width: 80%;
+        margin: 100px 35px 0px 35px;
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    .section-album article img{
+        width: 300px;
+        height: 300px;
+    }
+    .album-songs{
+        margin-left: 0px;
+    }
+    /*detail artists*/
+    .da-article{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 100px;
+        background-color: rgba(255, 0, 221, 0.72);
+    }
+    .da-img{
+        width: 300px;
+        height: 300px;
+        border-radius: 95%;
+        margin: 20px;
+    }
+    /* main generos */
+    article.genres{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        border-radius: 5px;
+        background-color: rgba(255, 0, 221, 0.72);
+        margin-left: 3%;
+        margin-right: 3%;
+        padding-left: 3%;
+        margin-top: 100px;
+    }
+    ul.genres{
+        font-size: 23px;
+        width: 50%;
+        text-align: center;
+    }
+    /* detail generos */
+    section.detail-genres{
+        background-color: rgba(255, 0, 221, 0.72);
+        margin-left: 3%;
+        margin-right: 3%;
+        margin-top: 100px;
+    }
+    .detail-genres h1{
+        font-size: 35px;
+        color: white;
+        margin-left: 20px;
+    }
+    ul.detail-genres{
+        font-size: 30px;
+        margin: 5%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    /* playlists */
+    .table{
+        background-color: rgba(255, 0, 221, 0.72);
+        border-radius: 10px;
+        margin: 0px 0px 0px 20px;
+    }
+    .h1playlist{
+        color: whitesmoke;
+        margin-top: 150px;
+        margin-left: 20px;
+    }
+    footer{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        padding-top: 200px;
+        width: 100%;
+        justify-content: space-between;
+        background-image: linear-gradient(to top, #470044, #460047, #43004b, #42004e86, #3f005200);
+        background-repeat: no-repeat;
+    }
 }
